--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,10 +14,11 @@
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="16dp" android:textSize="18sp"/>
     <ListView
-            android:layout_width="313dp"
-            android:layout_height="615dp" android:layout_marginBottom="16dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" android:layout_marginTop="32dp"
-            app:layout_constraintTop_toBottomOf="@+id/categoriesTxt" android:id="@+id/categoriesListView"/>
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/categoriesTxt" android:id="@+id/categoriesListView"
+    android:divider="@null"/>
 </android.support.constraint.ConstraintLayout>
